# godot-rust

./: .gitignore
gdnative-core/: Cargo.toml
gdnative-core/src/: lib.rs
gdnative-coretypes/: Cargo.toml
gdnative-coretypes/src/: array.rs  basis.rs  color.rs  dictionary.rs  lib.rs  node_path.rs  plane.rs  pool_arrays.rs  quat.rs  rect2.rs  rect3.rs  string.rs  transform2d.rs  variant.rs  vector2.rs  vector3.rs
gdnative-coretypes/src/godot/: array.rs  basis.rs  color.rs  dictionary.rs  mod.rs  node_path.rs  plane.rs  pool_arrays.rs  quat.rs  rect2.rs  rect3.rs  rid.rs  string.rs  transform.rs  transform2d.rs  variant.rs  vector2.rs  vector3.rs
gdnative-sys/: Cargo.toml
gdnative-sys-bindgen/: Cargo.toml  build.rs  wrapper.h
gdnative-sys-bindgen/src/: godot_core_api.rs
gdnative-sys/src/: lib.rs
