[project]
name = "gdnative-core"
version = "0.1.0"
authors = ["Max Sandholm <max@sandholm.org>"]
description = "Godot Engine GDNative scripting in Rust"
repository = "https://github.com/GodotNativeTools/rust_bindings"
license = "MIT"

[lib]
name = 'gdnative_core'
crate-type = ["dylib"]

[dependencies]
kerrex-gdnative-sys = "0.1.2"
gdnative-macros = "0.1.0"


